# FYP

./: Image_Segmentation.ipynb  Multi-Class_Classification.ipynb  README.md  docker-compose.yml
cancerscope_root/: Dockerfile  README.md  db.sqlite3  pyproject.toml
cancerscope_root/ml_models/: models.config
cancerscope_root/src/cancerscope_root/: main.py
cancerscope_root/src/cancerscope_root/models/: models.py
cancerscope_root/src/cancerscope_root/templates/: base.html  homepage.html  login.html  register.html
